--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hw-4"
+name = "t-hw-5"
 version = "0.1.0"
 description = ""
 authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
@@ -7,7 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-jinja2 = "3.1.3"
+httpx = "^0.26.0"
+websockets = "^12.0"
+names = "^0.3.0"
+aiohttp = "^3.9.3"
+fake-useragent = "^1.4.0"
+aiopath = "0.6.11"
 
 
 [build-system]
