--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hw-7"
+name = "hw8"
 version = "0.1.0"
 description = ""
 authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
@@ -7,10 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-sqlalchemy = "^2.0.27"
-alembic = "^1.13.1"
-faker = "^23.2.1"
-tabulate = "^0.9.0"
+pymongo = {extras = ["srv"], version = "^4.6.1"}
+python-dotenv = "^1.0.1"
+redis = "^5.0.1"
+redis-lru = "^0.1.2"
+mongoengine = "^0.27.0"
+pika = "^1.3.2"
+mimesis = "^14.0.0"
 
 
 [build-system]
