--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hw8"
+name = "hw-9"
 version = "0.1.0"
 description = ""
 authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
@@ -7,13 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pymongo = {extras = ["srv"], version = "^4.6.1"}
-python-dotenv = "^1.0.1"
-redis = "^5.0.1"
-redis-lru = "^0.1.2"
-mongoengine = "^0.27.0"
-pika = "^1.3.2"
-mimesis = "^14.0.0"
+bs4 = "^0.0.2"
+lxml = "^5.1.0"
+httpx = "^0.27.0"
+fake-useragent = "^1.4.0"
+pyppeteer = "^2.0.0"
+scrapy = "^2.11.1"
+aiofile = "^3.8.8"
 
 
 [build-system]
