--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hw-9"
+name = "hw-10"
 version = "0.1.0"
 description = ""
 authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
@@ -7,13 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-bs4 = "^0.0.2"
-lxml = "^5.1.0"
-httpx = "^0.27.0"
-fake-useragent = "^1.4.0"
-pyppeteer = "^2.0.0"
-scrapy = "^2.11.1"
-aiofile = "^3.8.8"
+django = "^5.0.3"
+psycopg2 = "^2.9.9"
+pillow = "^10.2.0"
+mongoengine = "^0.28.2"
+python-dotenv = "^1.0.1"
+pymongo = "^4.6.2"
 
 
 [build-system]
