--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hw-11"
+name = "hw-12"
 version = "0.1.0"
 description = ""
 authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
@@ -13,6 +13,15 @@ sqlalchemy = "^2.0.28"
 uvicorn = "^0.28.1"
 pydantic = {extras = ["email"], version = "^2.6.4"}
 python-dotenv = "^1.0.1"
+python-multipart = "0.0.7"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = "^3.3.0"
+alembic = "^1.13.1"
+libgravatar = "^1.0.4"
+bcrypt = "4.0.1"
+pwdlib = "^0.2.0"
+fastapi-users = {version = "12.1.3", extras = ["sqlalchemy"]}
+httpx-oauth = "^0.13.2"
 
 
 [build-system]
