--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
+# These id and secret are generated especially for testing purposes,
+# if you have your own, please use them, otherwise you can use these.
+# https://github.com/settings/apps
+OAUTH2_GITHUB_CLIENT_ID=15a1bb46c1018cf2b131
+OAUTH2_GITHUB_CLIENT_SECRET=d176df6d36bf30e7f50ee35ff9f1f7b2d602c20f
+
+
+# https://console.cloud.google.com/
+OAUTH2_GOOGLE_CLIENT_ID=105851609656-uueuan570963mnnf4288nv40eieh9f5l.apps.googleusercontent.com
+OAUTH2_GOOGLE_CLIENT_SECRET=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
+
+JWT_SECRET=kurlickurlic
+JWT_ALGORITHM=HS256
+JWT_EXPIRES=900
+
 DB=sqlite+aiosqlite:///db.sqlite3
 SECRET=kurlickurlic
 ALGORITHM=HS256
